# 36120-25SP-AT3-Group08-streamlit-deploy

./: README.md  github.txt  pyproject.toml  requirements.txt  runtime.txt
app/: main.py
students/: bitcoin.py  ethereum.py  solana.py  xrp.py
