[project]
name = "36120-25sp-at3-group08-streamlit"
version = "0.1.0"
description = "A Streamlit app for presenting cryptocurrency information and predicting next-day high prices."
authors = [
    { name = "Fang Yee Tan" }
]
readme = "README.md"
requires-python = "==3.11.4"

dependencies = [
    "streamlit==1.36.0",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "joblib==1.4.2",
    "fastapi==0.111.0",
    "uvicorn==0.30.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"